@@ -3,11 +3,10 @@ Section: libs
 Priority: optional
 Maintainer: Debian Install System Team <debian-boot@lists.debian.org>
 Uploaders: David Kimdon <dwhedon@debian.org>, Tollef Fog Heen <tfheen@debian.org>, Martin Sjogren <sjogren@debian.org>, Bastian Blank <waldi@debian.org>
-Build-Depends: debhelper (>= 4), autotools-dev, doxygen
+Build-Depends: debhelper (>= 4), di-packages-build, autotools-dev, doxygen
 Standards-Version: 3.6.0
 
 Package: libdebian-installer4
-Section: libs
 Architecture: any
 Depends: ${shlibs:Depends}
 Description: Library of common debian-installer functions
@@ -30,8 +29,18 @@ Description: Library of common debian-installer functions
  .
  This package contains files needed to do libdebian-installer development.
 
+Package: libdebian-installer4-udeb
+Section: debian-installer
+Architecture: any
+Depends: ${shlibs:Depends}
+Provides: libdebian-installer4
+Description: Library of common debian-installer functions
+ This library is used by debian-installer to perform common functions
+ such as logging messages and executing commands. If you aren't
+ working on debian-installer or building your own install system based
+ on debian-installer, then you probably don't need this library.
+
 Package: libdebian-installer-extra4
-Section: libs
 Architecture: any
 Depends: ${shlibs:Depends}, libdebian-installer4 (= ${Source-Version})
 Description: Library of some extra debian-installer functions
@@ -40,7 +49,7 @@ Description: Library of some extra debian-installer functions
  working on debian-installer or building your own install system based
  on debian-installer, then you probably don't need this library.
 
-Package: libdebian-installer-extra4-di
+Package: libdebian-installer-extra4-udeb
 Section: debian-installer
 Architecture: any
 Depends: ${shlibs:Depends}
