@@ -3,7 +3,7 @@ libdebian-installer (0.17.cvs) UNRELEASED; urgency=low
   * Alastair McKinstry
     - Add di_info(), di_debug() logging macros.
   * Bastian Blank
-    - dump revision to 1.
+    - bump revision to 1.
     - remove mapping of di_log.
     - add any symbol to the version script.
     - use size_t in hash map and mem_chunk allocer (closes: #215448)
@@ -12,11 +12,12 @@ libdebian-installer (0.17.cvs) UNRELEASED; urgency=low
     - fix description parsing (closes: #219902)
     - remove some references to the chunk allocator.
     - add version info to installed headers.
+    - default log handler suppress debug messages.
   * Petter Reinholdtsen
     - Define PATH_MAX if it is undefined, to get this building on
       GNU/Hurd.  Patch from Santiago Vila. (Closes: #219464)
 
- -- Bastian Blank <waldi@debian.org>  Thu, 11 Dec 2003 20:27:37 +0100
+ -- Bastian Blank <waldi@debian.org>  Sun, 14 Dec 2003 18:35:10 +0100
 
 libdebian-installer (0.17) unstable; urgency=low
 
